# cu-compsci-projects

./: README.md
2270-assignment-06/: CMakeLists.txt
assignment-7_2270/: CMakeLists.txt
assignment_5/: CMakeLists.txt
